src/test/deca/context/invalid/declMethod-sameNameFieldMethod.deca
class A {
    int coco;
}

class B extends A {
    A coco(int a) {
    }
}